--- a/index.html
+++ b/index.html
@@ -1,50 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Ansible-playbooks : Ansible Playbooks">
+    <title>Ansible-playbooks by akkaash</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Ansible-playbooks</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Ansible-playbooks</h1>
+        <p>Ansible Playbooks</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/akkaash/ansible-playbooks">View on GitHub</a>
+        <p class="view"><a href="https://github.com/akkaash/ansible-playbooks">View the Project on GitHub <small>akkaash/ansible-playbooks</small></a></p>
 
-          <h1 id="project_title">Ansible-playbooks</h1>
-          <h2 id="project_tagline">Ansible Playbooks</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/akkaash/ansible-playbooks/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/akkaash/ansible-playbooks/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <ul>
+          <li><a href="https://github.com/akkaash/ansible-playbooks/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/akkaash/ansible-playbooks/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/akkaash/ansible-playbooks">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="ansible-playbooks" class="anchor" href="#ansible-playbooks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ansible Playbooks</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="ansible-playbooks" class="anchor" href="#ansible-playbooks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ansible Playbooks</h3>
+<p>My work on using Ansible to configure different machines. </p>
+
+<p>All of these have been tested on Ubuntu Precise Pangolin 64-bit. </p>
+
+<p>May in the future decide to support other distros. </p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Ansible-playbooks maintained by <a href="https://github.com/akkaash">akkaash</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/akkaash">akkaash</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
